# NastyTetris

./: .clang-format  .gitignore  CMakeLists.txt  Config.h.in  README.md
cmake/: FindSDL3_image.cmake
scripts/: Create MSVS + Clang.ps1  Shadercompile.sh
src/: Application.cpp  Application.h  Assert.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetRepository.h  AssetView.cpp  AssetView.h  CoreAPI.h  EntryPoint.cpp  GPUPipeline.cpp  GPUPipeline.h  Log.h  ObjectPool.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Sprite2DPipeline.cpp  Sprite2DPipeline.h  TetrisGameScene.cpp  TetrisGameScene.h  Tetromino.cpp  Tetromino.h  Window.cpp  Window.h  iepch.h
src/Shader/: GPUPipelineBase.vertincl.hlsl  SpriteBatch.vert.hlsl  TextureXColor.frag.hlsl
